# SeetaAuthorize

./: .gitignore  meson.build
debian/: .gitignore  README.Debian  README.source  changelog  control  copyright  manpage.1.ex  manpage.sgml.ex  manpage.xml.ex  menu.ex  postinst.ex  postrm.ex  preinst.ex  prerm.ex  seetaface-authorise.cron.d.ex  seetaface-authorise.doc-base.EX  shlibs.local.ex  watch.ex
include/: SeetaLANLock.h  meson.build
include/hidden/: SeetaLockFunction.h  SeetaLockVerifyLAN.h  meson.build
include/lock/: cstamodelfilestream.h  cstastream.h  error_code.h  fast_cstastream.h  fast_encryptstream.h  meson.build
src/: SeteaLANLock.cpp  cstamodelfilestream.cpp  cstastream.cpp  error_code.cpp  fast_cstastream.cpp  fast_encryptstream.cpp  meson.build
